[package]
name = "saave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bytes = "1.5.0"
hyper = "0.14.27"
image = "0.24.7"
mime-db = "1.7.0"
sled = "0.34.7"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
webp = "0.2.5"
zstd = "0.12.4"
